--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background: linear-gradient(to right, hsl(200, 100%, 50%), hsl(118, 79%, 45%));
+    background: linear-gradient(to right, hsl(200, 100%, 20%),hsla(308, 79%, 45%, 0.678), hsl(118, 79%, 45%));
 
     display: flex;
     justify-content:center;
@@ -16,13 +16,13 @@ body {
 .clock {
     width: 300px;
     height: 300px;
-    background-color: rgba(255, 255, 255, .8);
+    background-color: rgba(255, 255, 255, .5);
     border-radius: 50%;
     border: red solid 0.1px;
     position: relative;
 }
 
-.clock .number {
+.clock .number{
     --rotation: 0;
     position: absolute;
     width: 100%;
@@ -69,8 +69,8 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 50%;
-
 }
+
 .clock .hand.second {
     width: 3px;
     height: 45%;
@@ -80,15 +80,14 @@ body {
 
 .clock .hand.minute {
     width: 6px;
-    height: 25%;
-    background-color: black;
-    z-index: 12;
-}
-
-.clock .hand.hour {
-    width: 8px;
     height: 35%;
     background-color: black;
     z-index: 11;
 }
 
+.clock .hand.hour {
+    width: 8px;
+    height: 25%;
+    background-color: black;
+    z-index: 12;
+}
